移動系完成

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Teashi/Assets/MMD/AviatorYukari-R2p03.meta
+Teashi/Assets/MMD/
+Teashi/Assets/MMD4Mecanim/
